--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -171,7 +171,7 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:majavir5536@email.com" class="button">Get in Touch</a></p>
     <p>Location: Hisar,Haryana,INDIA 🇮🇳</p>
-    <p>Return to Home: <a href="file:///C:/Users/Hp/Desktop/h.html" >link-to-my-Homepage</a></p>
+    <p>Return to Home: <a href="index.html" >link-to-my-Homepage</a></p>
   </section>
 
   <footer>
@@ -180,3 +180,4 @@
 
 </body>
 </html>
+
