--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@ x<!DOCTYPE html>
 <body>
 
   <header>
-            <img src="c:\Users\Hp\Downloads\download.webp" alt="logo of Institute">
+            <img src="download.webp" alt="logo of Institute">
     <h1>HIMANSU 🇮🇳</h1>
     <p>Student • Learner • Creator • Developer</p>
   </header>
@@ -180,4 +180,5 @@ x<!DOCTYPE html>
 
 </body>
 </html>
+
 
