--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
   <header>
-    <img src="c:\Users\Hp\Downloads\download.webp" alt="logo of Institute">
+    <img src="download.webp" alt="logo of Institute">
     <h1>Hello! I'm HIMANSU</h1>
     <p>A curious student who loves to learn 📚✨</p>
   </header>
@@ -142,3 +142,4 @@
   </footer>
 </body>
 </html>
+
