--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div id="contact" class="card">
       <h2>Contact</h2>
       <p>City/School: APS Hisar, Haryana, INDIA 🇮🇳</p>
-      <p>Portfolio: <a href="c:\Users\Hp\Desktop\portfolio.html">Check out my Portfolio</a></p>
+      <p>Portfolio: <a href="portfolio.html">Check out my Portfolio</a></p>
     </div>
   </section>
 
@@ -142,4 +142,5 @@
   </footer>
 </body>
 </html>
+
 
