--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@ x<!DOCTYPE html>
 
   <section id="contact" class="card">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:majavir5536@email.com" class="button">Get in Touch</a></p>
+    <p>Email: <a href="mailto:h13558351@gmail.com" class="button">Get in Touch</a></p>
     <p>Location: Hisar,Haryana,INDIA 🇮🇳</p>
     <p>Return to Home: <a href="index.html" >link-to-my-Homepage</a></p>
   </section>
@@ -180,5 +180,6 @@ x<!DOCTYPE html>
 
 </body>
 </html>
+
 
 
